Attempt to fix blurry effect during text transition

--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -54,6 +54,7 @@
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
 }
 
 .project-name {
